<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="36sp"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

    <ImageView android:layout_width="150dp"
               android:layout_height="150dp"
               app:layout_constraintBottom_toTopOf="@id/userNameText"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:background="@mipmap/userimg"
               android:id="@+id/imageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/userNameText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userNameAnswer"
            android:id="@+id/userNameAnswerText"
            android:layout_marginStart="12sp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userNameText"
            app:layout_constraintBottom_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userSurname"
            app:layout_constraintBottom_toTopOf="@id/userBirthDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameText"
            android:id="@+id/userSurnameText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userSurnameAnswer"
            android:layout_marginStart="12sp"
            app:layout_constraintBottom_toTopOf="@id/userBirthDateText"
            app:layout_constraintStart_toEndOf="@+id/userSurnameText"
            app:layout_constraintTop_toBottomOf="@+id/userNameAnswerText"
            android:id="@+id/userSurnameAnswerText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userBirthDate"
            app:layout_constraintBottom_toTopOf="@id/userEducationText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userSurnameText"
            android:id="@+id/userBirthDateText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userBirthDateAnswer"
            android:layout_marginStart="12sp"
            app:layout_constraintBottom_toTopOf="@id/userEducationAnswerText"
            app:layout_constraintStart_toEndOf="@+id/userBirthDateText"
            app:layout_constraintTop_toBottomOf="@+id/userSurnameText"
            android:id="@+id/userBirthDateAnswerText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userEducation"
            app:layout_constraintBottom_toTopOf="@id/userProfessionText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userBirthDateText"
            android:id="@+id/userEducationText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userEducationAnswer"
            android:layout_marginStart="12sp"
            app:layout_constraintBottom_toTopOf="@id/userProfessionAnswerText"
            app:layout_constraintStart_toEndOf="@+id/userEducationText"
            app:layout_constraintTop_toBottomOf="@+id/userBirthDateAnswerText"
            android:id="@+id/userEducationAnswerText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userProfession"
            app:layout_constraintBottom_toTopOf="@id/userSkillsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEducationText"
            android:id="@+id/userProfessionText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userProfessionAnswer"
            android:textStyle="bold"
            android:layout_marginStart="12sp"
            app:layout_constraintBottom_toTopOf="@id/userSkillsText"
            app:layout_constraintStart_toEndOf="@+id/userProfessionText"
            app:layout_constraintTop_toBottomOf="@+id/userEducationAnswerText"
            android:id="@+id/userProfessionAnswerText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userSkills"
            app:layout_constraintBottom_toTopOf="@id/userTwitterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userProfessionText"
            android:id="@+id/userSkillsText"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/userSkillsAnswer"
            app:layout_constraintBottom_toTopOf="@id/userTwitterButton"
            app:layout_constraintTop_toBottomOf="@+id/userProfessionAnswerText"
            android:id="@+id/userSkillsAnswerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userSkillsText"
            android:layout_marginStart="8dp"
            />


    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userTwitter"
            android:textColor="@color/colorText"
            android:background="@color/colorBackground"
            app:layout_constraintTop_toBottomOf="@id/userSkillsAnswerText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/userTwitterButton"
/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userReddit"
            android:textColor="@color/colorText"
            android:background="@color/colorBackground"
            app:layout_constraintTop_toBottomOf="@id/userSkillsAnswerText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/userTwitterButton"
            app:layout_constraintEnd_toStartOf="@id/userWebButton"
            android:id="@+id/userRedditButton"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userWebSite"
            android:textColor="@color/colorText"
            android:background="@color/colorBackground"
            app:layout_constraintTop_toBottomOf="@id/userSkillsAnswerText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/userRedditButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/userWebButton"
  />

</android.support.constraint.ConstraintLayout>